added SimuNeur.cpp : main for a simulation of 12'500 neurons, modified Neuron class to have inhibitory neurons aswell, minor other tweeks

--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 Project of neurons simulation
+
+Compile with SimuNeur.cpp as main for the full simulation
+(Simu1Neur.cpp and Simu2Neur.cpp used for previous testing)
